[package]
name = "partial-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clvmr = "0.14.0"
chia = "0.26.0"
clvm-traits = "0.26.0"
chia-puzzle-types = "0.26.0"
hex-literal = "0.4.1"
hex = "0.4.3"
clap = { version = "4", features = ["derive"] }
sage-api = { version = "0.10.3", git = "https://github.com/xch-dev/sage.git" }
chia-puzzles = "0.20.1"
bech32 = "0.9.1"
tokio = { version = "1.44.1", features = ["full"] }
chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", branch="the_merge", features=["offer-compression", "action-layer"] }
slot-machine = { git = "https://github.com/Yakuhito/slot-machine", branch="the_merge"}

[dev-dependencies]
anyhow = "1.0.98"
rstest = "0.25.0"
prettytable-rs = "0.10.0"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }